# pathtracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  render.ps1  render.sh
.github/workflows/: build.yml  render.yml
assets/cornell_box/: bunny.mtl  cornell_box.json  cornell_box.mtl
doc/models/: bunny.mtl  cornell_box.json  cornell_box.mtl  cube.mtl  example_config.json
src/: CMakeLists.txt  aabb.cpp  aabb.h  bvh.cpp  bvh.h  camera.cpp  camera.h  config.h  geometry.cpp  geometry.h  image.cpp  image.h  kdtree.cpp  kdtree.h  light.h  main.cpp  material.cpp  material.h  medium.cpp  medium.h  pt.cpp  pt.h  ray.cpp  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  texture.cpp  texture.h  threading.cpp  threading.h  util.h
test/: CMakeLists.txt  test_math.cpp
